reworks GET, POST, DELETE for new DB schema, adds service classes, brings in lodash, updates delete in swagger
